fix for toList